# rust_rocket_example

./: .gitignore  Cargo.toml  Rocket.toml  config.yaml
src/: config.rs  main.rs  object.rs  table.rs
