[package]
name = "rust_rocket_example"
version = "0.1.0"
authors = ["teki.sei <teki.sei@uzabase.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
diesel = { version = "1.4.0", features = ["mysql", "chrono"] }
serde = "1.0.29"
serde_json = "1.0"
serde_derive = "1.0"
reqwest = "0.9.11"
chrono = "0.4.6"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json", "diesel_mysql_pool"]
